# restapi/operations/post_users_free_slot_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"calendar/models"
+)
+
+// PostUsersFreeSlotOKCode is the HTTP code returned for type PostUsersFreeSlotOK
+const PostUsersFreeSlotOKCode int = 200
+
+/*PostUsersFreeSlotOK Ok
+
+swagger:response postUsersFreeSlotOK
+*/
+type PostUsersFreeSlotOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UsersFreeSlotResponse `json:"body,omitempty"`
+}
+
+// NewPostUsersFreeSlotOK creates PostUsersFreeSlotOK with default headers values
+func NewPostUsersFreeSlotOK() *PostUsersFreeSlotOK {
+
+	return &PostUsersFreeSlotOK{}
+}
+
+// WithPayload adds the payload to the post users free slot o k response
+func (o *PostUsersFreeSlotOK) WithPayload(payload *models.UsersFreeSlotResponse) *PostUsersFreeSlotOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post users free slot o k response
+func (o *PostUsersFreeSlotOK) SetPayload(payload *models.UsersFreeSlotResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostUsersFreeSlotOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostUsersFreeSlotNotFoundCode is the HTTP code returned for type PostUsersFreeSlotNotFound
+const PostUsersFreeSlotNotFoundCode int = 404
+
+/*PostUsersFreeSlotNotFound Not found
+
+swagger:response postUsersFreeSlotNotFound
+*/
+type PostUsersFreeSlotNotFound struct {
+}
+
+// NewPostUsersFreeSlotNotFound creates PostUsersFreeSlotNotFound with default headers values
+func NewPostUsersFreeSlotNotFound() *PostUsersFreeSlotNotFound {
+
+	return &PostUsersFreeSlotNotFound{}
+}
+
+// WriteResponse to the client
+func (o *PostUsersFreeSlotNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// PostUsersFreeSlotInternalServerErrorCode is the HTTP code returned for type PostUsersFreeSlotInternalServerError
+const PostUsersFreeSlotInternalServerErrorCode int = 500
+
+/*PostUsersFreeSlotInternalServerError Fail
+
+swagger:response postUsersFreeSlotInternalServerError
+*/
+type PostUsersFreeSlotInternalServerError struct {
+}
+
+// NewPostUsersFreeSlotInternalServerError creates PostUsersFreeSlotInternalServerError with default headers values
+func NewPostUsersFreeSlotInternalServerError() *PostUsersFreeSlotInternalServerError {
+
+	return &PostUsersFreeSlotInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *PostUsersFreeSlotInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
